<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bienvenida"
            android:textSize="80sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/baceptar"
            android:id="@+id/tbienvendio" app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="64dp"/>
    <Button


            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:id="@+id/baceptar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/tbienvendio"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
            android:text="@string/cancelcar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bcancelar"
            android:textSize="25sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/baceptar"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>