<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".informacion"
        android:background="#efebe9">
    <TextView
            android:text="@string/hola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Tsaludo" android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/Tunombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="190dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="192dp"
            android:textSize="40sp"
            android:textColor="@color/ColorLigth"
            android:textStyle="italic"/>
    <TextView
            android:text="@string/Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Tunombre"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="177dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="177dp"
            app:layout_constraintTop_toBottomOf="@+id/Tsaludo" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/TuEdad" android:layout_marginTop="24dp"
            android:textSize="40sp"
            android:textColor="@color/ColorLigth"
            android:textStyle="italic"/>
    <Button
            android:text="@string/Bsiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bsig2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="56dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="70dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" style="@style/Widget.AppCompat.Button.Colored"
            />
    <TextView
            android:text="@string/Tedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TuEdad" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="177dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="177dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/Tunombre" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/TuCorreo"
            android:textSize="25sp"
            android:textColor="@color/ColorLigth"
            android:textStyle="bold"/>
    <TextView
            android:text=" tu correo es "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TuCorreo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="178dp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/TuEdad" android:layout_marginBottom="47dp"
            app:layout_constraintBottom_toTopOf="@+id/TuFecha"
            android:textSize="25sp"
            android:textColor="@color/ColorLigth"
            android:textStyle="bold"/>
    <TextView
            android:text="la fecha es"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TuFecha"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="250dp"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/TuCorreo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="176dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="178dp"
            android:textSize="25sp"
            android:textColor="@color/ColorLigth"
            android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>